packages/ui/src/ui/tabs/tabs.module.css
.root {
  position: relative;
  border-bottom: 1px solid var(--color-outline);
}

.item {
  position: relative;
  display: inline-block;
  padding: var(--space-xsmall) 0;
  color: var(--color-text-ultra-light);
  font-weight: bold;
  text-decoration: none;
}

.item::after {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  bottom: -1px;
  height: 2px;
  background: transparent;
}

.item:hover {
  color: var(--color-text-light);
  outline: none;
}

.item:hover::after {
  background: currentColor;
}

.itemActive {
  color: var(--color-primary);
}

.itemActive::after {
  background: currentColor;
}

.item + .item {
  margin-left: var(--space-medium);
}

